// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportOrganizer import-organizer-file.ts should not remove default exported default imports 1`] = `
"import Barbaz from './foo';

export default Barbaz;
"
`;

exports[`ImportOrganizer import-organizer-file.ts should not remove default exported default imports 2`] = `
"import Barbaz from './foo';

export default Barbaz;
"
`;

exports[`ImportOrganizer import-organizer-file.ts should not remove directly exported default imports 1`] = `
"import Barbaz from './foo';

export { Barbaz }
"
`;

exports[`ImportOrganizer import-organizer-file.ts should not remove directly exported default imports 2`] = `
"import Barbaz from './foo';

export { Barbaz }
"
`;

exports[`ImportOrganizer import-organizer-file.ts should not remove directly exported imports 1`] = `
"import * as Foobar from './lol';
import * as Barbaz from './foo';

export { Foobar, Barbaz }
"
`;

exports[`ImportOrganizer import-organizer-file.ts should not remove directly exported imports 2`] = `
"import * as Barbaz from './foo';
import * as Foobar from './lol';

export { Foobar, Barbaz }
"
`;

exports[`ImportOrganizer import-organizer-file.tsx should not remove function that is used in tsx 1`] = `
"import { f } from './somewhere';
import * as React from 'react';

export class Comp extends React.Component {
  render() {
    return (
      <div>{f()}</div>
    );
  }
}
"
`;

exports[`ImportOrganizer import-organizer-file.tsx should not remove function that is used in tsx 2`] = `
"import * as React from 'react';

import { f } from './somewhere';

export class Comp extends React.Component {
  render() {
    return (
      <div>{f()}</div>
    );
  }
}
"
`;
